--- a/handmaid's_tale.html
+++ b/handmaid's_tale.html
@@ -10,7 +10,7 @@
     <h1>The Handmaid's Tale By Margaret Atwood</h1>
     <div id="menu">
         <ul id="dlist">
-          <li class="listed"><a href="Homepage.html">Home Page</a></li>
+          <li class="listed"><a href="http://english-literature.oluwatomifemi.com/">Home Page</a></li>
           <li class="listed"><a href="handmaid's_tale.html">The Handmaid's Tale</a></li>
           <li class="listed"><a href="hamlet.html">Hamlet</a></li>
           <li class="listed"><a href="SalesmanDeath.html">Death Of A Salesman</a></li>
