--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <h1>Grade 12 Literature Notes...</h1>
     <div id="menu">
       <ul>
-        <li><a href="Homepage.html">Home Page</a></li>
+        <li><a href="http://english-literature.oluwatomifemi.com/">Home Page</a></li>
         <li><a href="handmaid's_tale.html">The Handmaid's Tale</a></li>
         <li><a href="hamlet.html">Hamlet</a></li>
         <li><a href="SalesmanDeath.html">Death Of A Salesman</a></li>
