--- a/index.html
+++ b/index.html
@@ -171,15 +171,23 @@
 	#header .col-md-8 {
 		top: 5%;
 	}
+
+  .fullCard{
+            width: 90%
+          }
 }
 
 /* Medium devices (desktops, 992px and up) */
-@media (max-width: 992px) {	
+@media (max-width: 1750px) {	
 	
 	#about .middle {
 		margin-top: 65px;
 		margin-bottom: 65px;
 	}
+
+  .fullCard{
+            width: 90%
+          }
 }
         
 
